# mapping

./: .gitignore  CMakeLists.txt  README.md
doc/: parameterization.tex
inc/: barycenter_mapping.h  half_edge.h  hash_key.h  is_model_patch.h  lscm.h  save_matrix_as_image.h
src/: CMakeLists.txt  barycenter.cpp  barycenter_mapping.cpp  half_edge.cpp  is_model_patch.cpp  lscm.cpp  lscm_solver.cpp  main.cpp  test.cpp
