CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(MAIN)

SET(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS "-Wall -std=c++17")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(thirdparty/HLBFGS)
ADD_SUBDIRECTORY(doc EXCLUDE_FROM_ALL)
